// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attributes option should add attributes to tag ("injectType" option is "lazyStyleTag"): DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id=\\"existing-style\\">.existing { color: yellow }</style>
<style type=\\"text/css\\" foo=\\"bar\\" data-id=\\"style-tag-id\\">body {
  color: red;
}
</style><style type=\\"text/css\\" foo=\\"bar\\" data-id=\\"style-tag-id\\">h1 {
  color: blue;
}
</style></head>
<body>
  <h1>Body</h1>
  <div class=\\"target\\"></div>
  <iframe class=\\"iframeTarget\\"></iframe>


</body></html>"
`;

exports[`attributes option should add attributes to tag ("injectType" option is "lazyStyleTag"): errors 1`] = `Array []`;

exports[`attributes option should add attributes to tag ("injectType" option is "lazyStyleTag"): warnings 1`] = `Array []`;

exports[`attributes option should add attributes to tag ("injectType" option is "linkTag"): DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id=\\"existing-style\\">.existing { color: yellow }</style>
<link rel=\\"stylesheet\\" href=\\"a4197ed8dcb93d681801318bd25a41ed.css\\" type=\\"text/css\\" foo=\\"bar\\" data-id=\\"style-tag-id\\"><link rel=\\"stylesheet\\" href=\\"b37e8500d4037735f116e83ab5fd79a3.css\\" type=\\"text/css\\" foo=\\"bar\\" data-id=\\"style-tag-id\\"></head>
<body>
  <h1>Body</h1>
  <div class=\\"target\\"></div>
  <iframe class=\\"iframeTarget\\"></iframe>


</body></html>"
`;

exports[`attributes option should add attributes to tag ("injectType" option is "linkTag"): errors 1`] = `Array []`;

exports[`attributes option should add attributes to tag ("injectType" option is "linkTag"): warnings 1`] = `Array []`;

exports[`attributes option should add attributes to tag ("injectType" option is "singletonLazyStyleTag"): DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id=\\"existing-style\\">.existing { color: yellow }</style>
<style type=\\"text/css\\" foo=\\"bar\\" data-id=\\"style-tag-id\\">body {
  color: red;
}
h1 {
  color: blue;
}
</style></head>
<body>
  <h1>Body</h1>
  <div class=\\"target\\"></div>
  <iframe class=\\"iframeTarget\\"></iframe>


</body></html>"
`;

exports[`attributes option should add attributes to tag ("injectType" option is "singletonLazyStyleTag"): errors 1`] = `Array []`;

exports[`attributes option should add attributes to tag ("injectType" option is "singletonLazyStyleTag"): warnings 1`] = `Array []`;

exports[`attributes option should add attributes to tag ("injectType" option is "singletonStyleTag"): DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id=\\"existing-style\\">.existing { color: yellow }</style>
<style type=\\"text/css\\" foo=\\"bar\\" data-id=\\"style-tag-id\\">body {
  color: red;
}
h1 {
  color: blue;
}
</style></head>
<body>
  <h1>Body</h1>
  <div class=\\"target\\"></div>
  <iframe class=\\"iframeTarget\\"></iframe>


</body></html>"
`;

exports[`attributes option should add attributes to tag ("injectType" option is "singletonStyleTag"): errors 1`] = `Array []`;

exports[`attributes option should add attributes to tag ("injectType" option is "singletonStyleTag"): warnings 1`] = `Array []`;

exports[`attributes option should add attributes to tag ("injectType" option is "styleTag"): DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id=\\"existing-style\\">.existing { color: yellow }</style>
<style type=\\"text/css\\" foo=\\"bar\\" data-id=\\"style-tag-id\\">body {
  color: red;
}
</style><style type=\\"text/css\\" foo=\\"bar\\" data-id=\\"style-tag-id\\">h1 {
  color: blue;
}
</style></head>
<body>
  <h1>Body</h1>
  <div class=\\"target\\"></div>
  <iframe class=\\"iframeTarget\\"></iframe>


</body></html>"
`;

exports[`attributes option should add attributes to tag ("injectType" option is "styleTag"): errors 1`] = `Array []`;

exports[`attributes option should add attributes to tag ("injectType" option is "styleTag"): warnings 1`] = `Array []`;

exports[`attributes option should add nonce attribute #2: DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id=\\"existing-style\\">.existing { color: yellow }</style>
<style nonce=\\"12345678\\">body {
  color: red;
}
</style></head>
<body>
  <h1>Body</h1>
  <div class=\\"target\\"></div>
  <iframe class=\\"iframeTarget\\"></iframe>


</body></html>"
`;

exports[`attributes option should add nonce attribute #2: DOM 2`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id=\\"existing-style\\">.existing { color: yellow }</style>
<style nonce=\\"12345678\\">body {
  color: red;
}
</style></head>
<body>
  <h1>Body</h1>
  <div class=\\"target\\"></div>
  <iframe class=\\"iframeTarget\\"></iframe>


</body></html>"
`;

exports[`attributes option should add nonce attribute #2: DOM 3`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id=\\"existing-style\\">.existing { color: yellow }</style>
<style nonce=\\"12345678\\">body {
  color: red;
}
</style></head>
<body>
  <h1>Body</h1>
  <div class=\\"target\\"></div>
  <iframe class=\\"iframeTarget\\"></iframe>


</body></html>"
`;

exports[`attributes option should add nonce attribute #2: DOM 4`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id=\\"existing-style\\">.existing { color: yellow }</style>
<style nonce=\\"12345678\\">body {
  color: red;
}
</style></head>
<body>
  <h1>Body</h1>
  <div class=\\"target\\"></div>
  <iframe class=\\"iframeTarget\\"></iframe>


</body></html>"
`;

exports[`attributes option should add nonce attribute #2: DOM 5`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id=\\"existing-style\\">.existing { color: yellow }</style>
<link rel=\\"stylesheet\\" href=\\"a4197ed8dcb93d681801318bd25a41ed.css\\" nonce=\\"12345678\\"></head>
<body>
  <h1>Body</h1>
  <div class=\\"target\\"></div>
  <iframe class=\\"iframeTarget\\"></iframe>


</body></html>"
`;

exports[`attributes option should add nonce attribute #2: errors 1`] = `Array []`;

exports[`attributes option should add nonce attribute #2: errors 2`] = `Array []`;

exports[`attributes option should add nonce attribute #2: errors 3`] = `Array []`;

exports[`attributes option should add nonce attribute #2: errors 4`] = `Array []`;

exports[`attributes option should add nonce attribute #2: errors 5`] = `Array []`;

exports[`attributes option should add nonce attribute #2: warnings 1`] = `Array []`;

exports[`attributes option should add nonce attribute #2: warnings 2`] = `Array []`;

exports[`attributes option should add nonce attribute #2: warnings 3`] = `Array []`;

exports[`attributes option should add nonce attribute #2: warnings 4`] = `Array []`;

exports[`attributes option should add nonce attribute #2: warnings 5`] = `Array []`;

exports[`attributes option should add nonce attribute ("injectType" option is "lazyStyleTag"): DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id=\\"existing-style\\">.existing { color: yellow }</style>
<style nonce=\\"12345678\\">body {
  color: red;
}
</style></head>
<body>
  <h1>Body</h1>
  <div class=\\"target\\"></div>
  <iframe class=\\"iframeTarget\\"></iframe>


</body></html>"
`;

exports[`attributes option should add nonce attribute ("injectType" option is "lazyStyleTag"): errors 1`] = `Array []`;

exports[`attributes option should add nonce attribute ("injectType" option is "lazyStyleTag"): warnings 1`] = `Array []`;

exports[`attributes option should add nonce attribute ("injectType" option is "linkTag"): DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id=\\"existing-style\\">.existing { color: yellow }</style>
<link rel=\\"stylesheet\\" href=\\"a4197ed8dcb93d681801318bd25a41ed.css\\" nonce=\\"12345678\\"></head>
<body>
  <h1>Body</h1>
  <div class=\\"target\\"></div>
  <iframe class=\\"iframeTarget\\"></iframe>


</body></html>"
`;

exports[`attributes option should add nonce attribute ("injectType" option is "linkTag"): errors 1`] = `Array []`;

exports[`attributes option should add nonce attribute ("injectType" option is "linkTag"): warnings 1`] = `Array []`;

exports[`attributes option should add nonce attribute ("injectType" option is "singletonLazyStyleTag"): DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id=\\"existing-style\\">.existing { color: yellow }</style>
<style nonce=\\"12345678\\">body {
  color: red;
}
</style></head>
<body>
  <h1>Body</h1>
  <div class=\\"target\\"></div>
  <iframe class=\\"iframeTarget\\"></iframe>


</body></html>"
`;

exports[`attributes option should add nonce attribute ("injectType" option is "singletonLazyStyleTag"): errors 1`] = `Array []`;

exports[`attributes option should add nonce attribute ("injectType" option is "singletonLazyStyleTag"): warnings 1`] = `Array []`;

exports[`attributes option should add nonce attribute ("injectType" option is "singletonStyleTag"): DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id=\\"existing-style\\">.existing { color: yellow }</style>
<style nonce=\\"12345678\\">body {
  color: red;
}
</style></head>
<body>
  <h1>Body</h1>
  <div class=\\"target\\"></div>
  <iframe class=\\"iframeTarget\\"></iframe>


</body></html>"
`;

exports[`attributes option should add nonce attribute ("injectType" option is "singletonStyleTag"): errors 1`] = `Array []`;

exports[`attributes option should add nonce attribute ("injectType" option is "singletonStyleTag"): warnings 1`] = `Array []`;

exports[`attributes option should add nonce attribute ("injectType" option is "styleTag"): DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id=\\"existing-style\\">.existing { color: yellow }</style>
<style nonce=\\"12345678\\">body {
  color: red;
}
</style></head>
<body>
  <h1>Body</h1>
  <div class=\\"target\\"></div>
  <iframe class=\\"iframeTarget\\"></iframe>


</body></html>"
`;

exports[`attributes option should add nonce attribute ("injectType" option is "styleTag"): errors 1`] = `Array []`;

exports[`attributes option should add nonce attribute ("injectType" option is "styleTag"): warnings 1`] = `Array []`;
